[tool.poetry]
name = "notion_to_github_blog"
version = "0.1.0"
description = ""
authors = ["Akkuman <akkumans@qq.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
notiontomd = "^0.1.4"
PyGithub = "^1.55"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
